[tool.poetry]
name = "spaczz"
version = "0.5.4"
description = "Adds fuzzy matching and additional regex matching support to spaCy."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gandersen101/spaczz"
repository = "https://github.com/gandersen101/spaczz"
keywords = ["fuzzy matching", "spacy", "nlp"]
authors = ["Grant Andersen <gandersen.codes@gmail.com>"]
documentation = "https://spaczz.readthedocs.io"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
spacy = "^3.5.2"
regex = "^2023.3.23"
rapidfuzz = "^3.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.3.1"
coverage = {version = "^7.2.3", extras = ["toml"]}
pytest-cov = "^4.0.0"
flake8-black = "0.*"
flake8-bugbear = "^23.3.23"
flake8-bandit = "^4.1.1"
safety = "^2.3.5"
flake8-import-order = "^0.18.2"
mypy = "0.*"
flake8-annotations = "^3.0.0"
flake8-docstrings = "^1.7.0"
darglint = "^1.8.1"
xdoctest = "0.*"
sphinx = "^6.1.3"
rstcheck = "^6.1.2"
sphinx-autodoc-typehints = "^1.23.0"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.plugins."spacy_factories"]
"spaczz_ruler" = "spaczz.pipeline:SpaczzRuler"

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["spaczz"]

[tool.coverage.report]
show_missing = true

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
